 - add GamePaused and GameProgress callins to base gadget-handler
 - extend builtin uniform binding for custom Lua materials
   SEE "fix LuaMaterial uniform management" BELOW FOR THE
   LIST OF NEW LOCATION KEYS THAT ARE RECOGNIZED AS OF 102
 - Add Spring.GetFrameTimer(bool synced) to get a timer for the start of the frame
   this should give better results for camera interpolations.

Save/Load:
 ! remove UseCREGSaveLoad and add /LuaSave which generates .slsf files
 ! compress creg saves
 - SaveFile can be specified in start script in order to start from a save

Rendering:
 - reduce number of team-color updates for custom shaders
 - use frame-extrapolation for features (smoother movement)
 - skip drawing icons for void-space units

AI:
 - make skirmishAiCallback_Unit_getResource{Use,Make} not round their return values to ints
 - RulesParams are now accessible through skirmishAiCallback_{Game,Unit,Team,Feature}_getRulesParamValue{String,Float}

Misc:
 - make the time server spends in sleep calls configurable (for dedicated hosts)
 - rename the 'ReflectiveWater' config-key to 'Water' (to match the command)
 - set the 'GroundDetail' config-val only when it changes, not on shutdown
 - auto-normalize normals and tangents for all AssImp-loaded models
 - add a gameDeferredDraw=5 drawMode value (handy for Draw{Unit,Feature} to know)

Bugfixes:
 - fix invisible OBJ models
 - fix gl.DeleteShader allowing repeated deletion
 - fix Spring.SetSunLighting crash when AdvMapShading=0
 - fix Spring.ValidUnitID to accept nils again
 - fix wreckage jumping from large *horizontal* impulse
 - fix landed HoverAirMoveType aircraft behavior when given a command within their build range
 ! fix LuaMaterial uniform management for materials with standard and deferred shaders
   material tables are now expected to contain subtables defining the uniforms; instead of
     "material = {shader = ..., cameraposloc = 123, texunits = ..., ...}"
   say